fix bug 21404: Teleopti logo in MyTime Web looks a little blurry
--HG--
branch : Release 7.2.372

--- a/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
+++ b/Teleopti.Ccc.Web/Teleopti.Ccc.Web/Areas/MyTime/Content/Css/Site.css
@@ -466,7 +466,8 @@ button.icon-left{padding-left: 35px;}
 /* Page elements */
 body{background: #fbfdfd url(../Images/body_bg.jpg) top center fixed no-repeat;}
 header {
-	background: transparent url(../Images/header_bg.png) top center no-repeat; 
+	background: transparent url(../Images/header_bg_2x.png) top center no-repeat; 
+	background-size: 975px 67px;
 	font-size: 11px; 
 	height: 67px; 
 	position:fixed; 
